--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,11 @@
-.control{ margin-top: 16px; }
-ul { list-style: none; }
-.fa { cursor:pointer; font-size: 16px; }
+ul {
+	list-style: none;
+}
+.new-img { 
+	height: 80px;
+	border-radius: 50%;
+	margin-top: 15px;
+}
+.jumbotron{
+	box-shadow: 0 4px 10px rgba(68,68,68,0.4);
+}
