--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,12 +7,20 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src="/javascripts/angular.min.js")
-    script(src="/javascripts/angular-ui-router.min.js")
-    script(src="/javascripts/main.js")
   body(ng-app="newsFeed")
-    block content
+    nav(class="navbar navbar-inverse")
+        div(class="navbar-header")
+            a(href="#" class="navbar-brand") News Feed
+    .container
+        .row
+            .jumbotron
+                block content
   script(type="text/ng-template" id="/news.html")
-    .col-md-12(ng-controller="NewsCtrl")
-        ul(ng-repeat="item in titleP")
-            li{{item}}
+    .col-md-12
+        ul(class="collapsible", data-collapsible="accordion")
+            li(ng-repeat="item in titleP")
+                .collapsible-header #[img(ng-src="{{item.image}}", class="new-img")] {{item.title}}
+                .collapsible-body #[p {{item.content}}]
+  script(src="/javascripts/angular.min.js")
+  script(src="/javascripts/angular-ui-router.min.js")
+  script(src="/javascripts/main.js")
