--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,301 @@
-ul {
-	list-style: none;
+/*body{
+    color: #3d3d3d;
+}*/
+.app {
+    height: calc(100% - 38px);
+    position: relative;
+    margin: 0 auto;
+    top: 19px;
+    z-index: 2;
+    border-radius: 3px;
+    overflow: hidden;
+    background-position: top left;
+    background-repeat: repeat-x;
+    background-color: #f7f7f7;
+    margin-bottom: 23px;
+    box-shadow: 0 4px 10px rgba(68,68,68,0.4);
 }
-.new-img { 
-	height: 80px;
-	border-radius: 50%;
-	margin-top: 15px;
+ul li{
+    list-style: none;
 }
-.jumbotron{
-	box-shadow: 0 4px 10px rgba(68,68,68,0.4);
+.new{
+    cursor: pointer;
+}
+.panel, .navbar{
+    border-radius: 2px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.navbar{
+    background-color: #f04d4e;
+}
+.panel-body.content-new{
+    padding: 0px 13px 0px 0px;
+}
+.panel img.new-img{
+    height: 120px;
+    border-radius: 50%;
+    margin: auto;
+    padding: auto;
+}
+img.img-content{
+    height: 100%;
+    width: auto;
+}
+#menu i{
+	font-size: 26px;
+}
+.title-new{
+    margin: 5%;
+}
+.content.ng-leave{
+    animation: pullUp .7s;
+    -webkit-animation: pullUp .7s;
+}
+.content.ng-enter{
+    animation: pullDown .7s;
+    -webkit-animation: pullDown .7s;
+}
+@media screen and (min-width: 1200px){
+    .app {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+}
+@media screen and (max-width: 700px){
+    .panel img.new-img {
+        border-radius: 50%;
+        margin: auto 30%;
+        padding: auto;
+        width: auto;
+    }
+    .navbar-header ul li a.navbar-brand{
+        margin-left: 16px;
+    }
+}
+@media screen and (max-width: 760px){
+    .panel img.new-img {
+        border-radius: 50%;
+        margin: auto 40%;
+        padding: auto;
+        width: auto;
+    }
+    .navbar-header ul li a.navbar-brand{
+        margin-left: 16px;
+    }
+    .navbar-header ul li a{
+        display: inline;
+    }
+}
+
+@media screen and (max-width: 780px){
+    .navbar-header ul li a.navbar-brand{
+        margin-left: 16px;
+    }   
+}
+
+/*
+==============================================
+pullUp
+==============================================
+*/
+
+.pullUp{
+    animation-name: pullUp;
+    -webkit-animation-name: pullUp; 
+
+    animation-duration: .6s;   
+    -webkit-animation-duration: .6s;
+
+    animation-timing-function: ease-out;    
+    -webkit-animation-timing-function: ease-out;    
+
+    transform-origin: 100% 0%;
+    -ms-transform-origin: 100% 0%;
+    -webkit-transform-origin: 100% 0%;      
+}
+
+@keyframes pullUp {
+    0% {
+        -webkit-transform: scaleY(1);
+    }
+    40% {
+        -webkit-transform: scaleY(1.01);
+    }
+    60% {
+        -webkit-transform: scaleY(0.98);
+    }
+    80% {
+        -webkit-transform: scaleY(1.01);
+    }
+    100% {
+        -webkit-transform: scaleY(0.98);
+    }               
+    80% {
+        -webkit-transform: scaleY(1.02);
+    }
+    100% {
+        -webkit-transform: scaleY(0);
+    }
+}
+
+@-webkit-keyframes pullUp {
+    0% {
+        -webkit-transform: scaleY(1);
+    }
+    40% {
+        -webkit-transform: scaleY(1.01);
+    }
+    60% {
+        -webkit-transform: scaleY(0.98);
+    }
+    80% {
+        -webkit-transform: scaleY(1.01);
+    }
+    100% {
+        -webkit-transform: scaleY(0.98);
+    }               
+    80% {
+        -webkit-transform: scaleY(1.02);
+    }
+    100% {
+        -webkit-transform: scaleY(0);
+    }       
+}
+
+/*
+==============================================
+pullDown
+==============================================
+*/
+
+.pullDown{
+    animation-name: pullDown;
+    -webkit-animation-name: pullDown;   
+
+    animation-duration: 1.1s;   
+    -webkit-animation-duration: 1.1s;
+
+    animation-timing-function: ease-out;    
+    -webkit-animation-timing-function: ease-out;    
+
+    transform-origin: 50% 0%;
+    -ms-transform-origin: 50% 0%;
+    -webkit-transform-origin: 50% 0%;       
+}
+
+@keyframes pullDown {
+    0% {
+        transform: scaleY(0.1);
+    }
+    40% {
+        transform: scaleY(1.02);
+    }
+    60% {
+        transform: scaleY(0.98);
+    }
+    80% {
+        transform: scaleY(1.01);
+    }
+    100% {
+        transform: scaleY(0.98);
+    }               
+    80% {
+        transform: scaleY(1.01);
+    }
+    100% {
+        transform: scaleY(1);
+    }                           
+}
+
+@-webkit-keyframes pullDown {
+    0% {
+        -webkit-transform: scaleY(0.1);
+    }
+    40% {
+        -webkit-transform: scaleY(1.02);
+    }
+    60% {
+        -webkit-transform: scaleY(0.98);
+    }
+    80% {
+        -webkit-transform: scaleY(1.01);
+    }
+    100% {
+        -webkit-transform: scaleY(0.98);
+    }               
+    80% {
+        -webkit-transform: scaleY(1.01);
+    }
+    100% {
+        -webkit-transform: scaleY(1);
+    }       
+}
+
+/*
+==============================================
+stretchRight
+==============================================
+*/
+
+.stretchRight{
+    animation-name: stretchRight;
+    -webkit-animation-name: stretchRight;   
+
+    animation-duration: .6s;    
+    -webkit-animation-duration: .6s;
+
+    animation-timing-function: ease-out;    
+    -webkit-animation-timing-function: ease-out;    
+
+    transform-origin: 0% 0%;
+    -ms-transform-origin: 0% 0%;
+    -webkit-transform-origin: 0% 0%;        
+}
+
+@keyframes stretchRight {
+    0% {
+        transform: scaleX(0.3);
+    }
+    40% {
+        transform: scaleX(1.02);
+    }
+    60% {
+        transform: scaleX(0.98);
+    }
+    80% {
+        transform: scaleX(1.01);
+    }
+    100% {
+        transform: scaleX(0.98);
+    }               
+    80% {
+        transform: scaleX(1.01);
+    }
+    100% {
+        transform: scaleX(1);
+    }                           
+}
+
+@-webkit-keyframes stretchRight {
+    0% {
+        -webkit-transform: scaleX(0.3);
+    }
+    40% {
+        -webkit-transform: scaleX(1.02);
+    }
+    60% {
+        -webkit-transform: scaleX(0.98);
+    }
+    80% {
+        -webkit-transform: scaleX(1.01);
+    }
+    100% {
+        -webkit-transform: scaleX(0.98);
+    }               
+    80% {
+        -webkit-transform: scaleX(1.01);
+    }
+    100% {
+        -webkit-transform: scaleX(1);
+    }       
 }
