--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,16 +22,18 @@ html
             block content
   script(type="text/ng-template" id="/news.html")
     .container(ng-show="!loader")
-        div(ng-repeat="(key,new) in news | orderBy: '-id'")
-            .panel.panel-default.new.stretchRight(ng-click="toggleContent(new.id)")
+        div(ng-repeat="(key,new) in news | orderBy: ''")
+            .panel.panel-default.new.stretchRight
                 .panel-body
                     .row
                         .col-xs-12.col-sm-2.col-md-2
                             img(ng-src="{{new.image}}", class="new-img")
-                        .col-xs-12.col-sm-10.col-md-10
+                        .col-xs-12.col-sm-10.col-md-10(ng-click="toggleContent(key)")
                             h4.title-new #[strong{{new.title}}]
-                            small(ng-click="like(new)") #[p Likes: #[i.fa.fa-thumbs-up] #[span.badge {{new.id}}]]
-            .panel.panel-default.ng-hide.content(id="{{new.id}}")
+                        .col-xs-12.col-sm-10.col-md-10
+                            small(ng-click="like(key)") #[p Likes: #[i.fa.fa-thumbs-up] #[span.badge {{new.id}}]]
+
+            .panel.panel-default.ng-hide.content(id="{{key}}")
                 .panel-body.content-new
                     .row
                         .col-md-4.col-sm-4
